// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BbCodePresenterPure component with correct message should match expected snapshot 1`] = `
<withStyles(Root)>
  wrong/url.png
  <withStyles(TextLinePure)>
     text 
  </withStyles(TextLinePure)>
  <withStyles(UrlPure)
    url="http://correct.url/content.png"
  >
    http://correct.url/content.png
  </withStyles(UrlPure)>
  <NewLine />
  <withStyles(UrlPure)
    url="https://correct.url/content.png"
  >
    https://correct.url/content.png
  </withStyles(UrlPure)>
  <NewLine />
  <withStyles(UrlPure)
    url="http://path.to/some/image.png"
  >
    <withStyles(TextLinePure)>
      Link
    </withStyles(TextLinePure)>
  </withStyles(UrlPure)>
  <withStyles(TextLinePure)>
     
  </withStyles(TextLinePure)>
  <withStyles(UrlPure)
    url="http://path.to/some/image.png"
  >
    <Image
      url="https://path.to/some/image.png"
    />
  </withStyles(UrlPure)>
  <withStyles(TextLinePure)>
     text 
  </withStyles(TextLinePure)>
  <BaseSpan
    className="default-BbCodePresenter-underline"
    style={Object {}}
  >
    <withStyles(TextLinePure)>
      text in u tag 
    </withStyles(TextLinePure)>
    <Color
      options="red"
    >
      <withStyles(TextLinePure)>
        red text
      </withStyles(TextLinePure)>
    </Color>
    <withStyles(TextLinePure)>
       
    </withStyles(TextLinePure)>
    <BaseSpan
      className="default-BbCodePresenter-bold"
      style={Object {}}
    >
      <withStyles(TextLinePure)>
        text in b tag 21
      </withStyles(TextLinePure)>
    </BaseSpan>
    <withStyles(TextLinePure)>
       
    </withStyles(TextLinePure)>
    <BaseSpan
      className="default-BbCodePresenter-underline"
      style={Object {}}
    >
      <withStyles(TextLinePure)>
        text in u tag
      </withStyles(TextLinePure)>
    </BaseSpan>
    <NewLine />
    <withStyles(TextLinePure)>
      text in u tag 
    </withStyles(TextLinePure)>
    <BaseSpan
      className="default-BbCodePresenter-bold"
      style={Object {}}
    >
      <withStyles(TextLinePure)>
        text in b tag
      </withStyles(TextLinePure)>
    </BaseSpan>
    <withStyles(TextLinePure)>
       
    </withStyles(TextLinePure)>
  </BaseSpan>
  <withStyles(TextLinePure)>
     text 
  </withStyles(TextLinePure)>
  <withStyles(Code)
    id={47}
    options="kto"
  >
    <withStyles(TextLinePure)>
      some text[b]with other bbCodes[/b] in code tag
    </withStyles(TextLinePure)>
  </withStyles(Code)>
  <withStyles(TextLinePure)>
     text
  </withStyles(TextLinePure)>
  <NewLine />
  <withStyles(TextLinePure)>
     
  </withStyles(TextLinePure)>
  <Image
    url="http://fastpic.ru/big/e.gif"
  />
  <NewLine />
  <Image
    url="http://fastpic.ru/big/7.gif"
  />
  <NewLine />
  <Image
    url="http://fastpic.ru/big/c.gif"
  />
  <NewLine />
  <Image
    url="http://fastpic.ru/big/3.gif"
  />
  <withStyles(TextLinePure)>
     
  </withStyles(TextLinePure)>
  <withStyles(UrlPure)
    url="http://fastpic.ru/2015/0.png"
  >
    http://fastpic.ru/2015/0.png
  </withStyles(UrlPure)>
  <NewLine />
  <withStyles(UrlPure)
    url="http://fastpic.ru/2015/0.gif "
  >
    http://fastpic.ru/2015/0.gif 
  </withStyles(UrlPure)>
  <withStyles(Quote)>
    <withStyles(TextLinePure)>
       quote 
    </withStyles(TextLinePure)>
    <withStyles(Quote)
      options="kto"
    >
      <withStyles(TextLinePure)>
         and subQuote 
      </withStyles(TextLinePure)>
      <BaseSpan
        className="default-BbCodePresenter-italic"
        style={Object {}}
      >
        <withStyles(TextLinePure)>
          with 
        </withStyles(TextLinePure)>
        <BaseSpan
          className="default-BbCodePresenter-underline"
          style={Object {}}
        >
          <withStyles(TextLinePure)>
            some
          </withStyles(TextLinePure)>
        </BaseSpan>
        <withStyles(TextLinePure)>
          tags
        </withStyles(TextLinePure)>
      </BaseSpan>
      <withStyles(TextLinePure)>
         param
      </withStyles(TextLinePure)>
    </withStyles(Quote)>
    <withStyles(TextLinePure)>
       
    </withStyles(TextLinePure)>
    <BaseSpan
      className="default-BbCodePresenter-bold"
      style={Object {}}
    >
      <withStyles(TextLinePure)>
        some
      </withStyles(TextLinePure)>
      <BaseSpan
        className="default-BbCodePresenter-italic"
        style={Object {}}
      >
        <withStyles(TextLinePure)>
          other
        </withStyles(TextLinePure)>
      </BaseSpan>
      <withStyles(TextLinePure)>
        text
      </withStyles(TextLinePure)>
    </BaseSpan>
    <withStyles(TextLinePure)>
       with tags
    </withStyles(TextLinePure)>
  </withStyles(Quote)>
  <withStyles(TextLinePure)>
     
  </withStyles(TextLinePure)>
  <withStyles(UrlPure)
    url="http://fastpic.ru/10/0.png"
  >
    <Image
      url="http://fastpic.ru/e.gif"
    />
    <withStyles(TextLinePure)>
       Link with 2 images as link 
    </withStyles(TextLinePure)>
    <Image
      url="http://fastpic.ru/big/7b40.gif"
    />
  </withStyles(UrlPure)>
</withStyles(Root)>
`;

exports[`BbCodePresenterPure component with incorrect message (one redundant [/b] tag)  match expected snapshot and does not include last root tag as text 1`] = `
<withStyles(Root)>
  wrong/url.png
  <withStyles(TextLinePure)>
     text 
  </withStyles(TextLinePure)>
  <withStyles(UrlPure)
    url="http://correct.url/content.png"
  >
    http://correct.url/content.png
  </withStyles(UrlPure)>
  <NewLine />
  <withStyles(UrlPure)
    url="https://correct.url/content.png"
  >
    https://correct.url/content.png
  </withStyles(UrlPure)>
  <NewLine />
  <withStyles(UrlPure)
    url="http://path.to/some/image.png"
  >
    <withStyles(TextLinePure)>
      Link
    </withStyles(TextLinePure)>
  </withStyles(UrlPure)>
  <withStyles(TextLinePure)>
     
  </withStyles(TextLinePure)>
  <withStyles(UrlPure)
    url="http://path.to/some/image.png"
  >
    <Image
      url="https://path.to/some/image.png"
    />
  </withStyles(UrlPure)>
  <withStyles(TextLinePure)>
     text 
  </withStyles(TextLinePure)>
  <BaseSpan
    className="default-BbCodePresenter-underline"
    style={Object {}}
  >
    <withStyles(TextLinePure)>
      text in u tag 
    </withStyles(TextLinePure)>
    <Color
      options="red"
    >
      <withStyles(TextLinePure)>
        red text
      </withStyles(TextLinePure)>
    </Color>
    <withStyles(TextLinePure)>
       
    </withStyles(TextLinePure)>
    <BaseSpan
      className="default-BbCodePresenter-bold"
      style={Object {}}
    >
      <withStyles(TextLinePure)>
        text in b tag 21
      </withStyles(TextLinePure)>
    </BaseSpan>
    <withStyles(TextLinePure)>
       
    </withStyles(TextLinePure)>
    <BaseSpan
      className="default-BbCodePresenter-underline"
      style={Object {}}
    >
      <withStyles(TextLinePure)>
        text in u tag
      </withStyles(TextLinePure)>
    </BaseSpan>
    <NewLine />
    <withStyles(TextLinePure)>
      text in u tag 
    </withStyles(TextLinePure)>
    <BaseSpan
      className="default-BbCodePresenter-bold"
      style={Object {}}
    >
      <withStyles(TextLinePure)>
        text in b tag
      </withStyles(TextLinePure)>
    </BaseSpan>
    <withStyles(TextLinePure)>
       
    </withStyles(TextLinePure)>
  </BaseSpan>
  <withStyles(TextLinePure)>
     this text contains 
  </withStyles(TextLinePure)>
  <withStyles(TextLinePure)>
    [/b]
  </withStyles(TextLinePure)>
  <withStyles(TextLinePure)>
     that is a wrong tags 
  </withStyles(TextLinePure)>
  <withStyles(Code)
    id={49}
    options="kto"
  >
    <withStyles(TextLinePure)>
      some text[b]with other bbCodes[/b] in code tag
    </withStyles(TextLinePure)>
  </withStyles(Code)>
  <withStyles(TextLinePure)>
     text
  </withStyles(TextLinePure)>
  <NewLine />
  <withStyles(TextLinePure)>
     
  </withStyles(TextLinePure)>
  <Image
    url="http://fastpic.ru/big/e.gif"
  />
  <NewLine />
  <Image
    url="http://fastpic.ru/big/7.gif"
  />
  <NewLine />
  <Image
    url="http://fastpic.ru/big/c.gif"
  />
  <NewLine />
  <Image
    url="http://fastpic.ru/big/3.gif"
  />
  <withStyles(TextLinePure)>
     
  </withStyles(TextLinePure)>
  <withStyles(UrlPure)
    url="http://fastpic.ru/2015/0.png"
  >
    http://fastpic.ru/2015/0.png
  </withStyles(UrlPure)>
  <NewLine />
  <withStyles(UrlPure)
    url="http://fastpic.ru/2015/0.gif "
  >
    http://fastpic.ru/2015/0.gif 
  </withStyles(UrlPure)>
  <withStyles(Quote)>
    <withStyles(TextLinePure)>
       quote 
    </withStyles(TextLinePure)>
    <withStyles(Quote)
      options="kto"
    >
      <withStyles(TextLinePure)>
         and subQuote 
      </withStyles(TextLinePure)>
      <BaseSpan
        className="default-BbCodePresenter-italic"
        style={Object {}}
      >
        <withStyles(TextLinePure)>
          with 
        </withStyles(TextLinePure)>
        <BaseSpan
          className="default-BbCodePresenter-underline"
          style={Object {}}
        >
          <withStyles(TextLinePure)>
            some
          </withStyles(TextLinePure)>
        </BaseSpan>
        <withStyles(TextLinePure)>
          tags
        </withStyles(TextLinePure)>
      </BaseSpan>
      <withStyles(TextLinePure)>
         param
      </withStyles(TextLinePure)>
    </withStyles(Quote)>
    <withStyles(TextLinePure)>
       
    </withStyles(TextLinePure)>
    <BaseSpan
      className="default-BbCodePresenter-bold"
      style={Object {}}
    >
      <withStyles(TextLinePure)>
        some
      </withStyles(TextLinePure)>
      <BaseSpan
        className="default-BbCodePresenter-italic"
        style={Object {}}
      >
        <withStyles(TextLinePure)>
          other
        </withStyles(TextLinePure)>
      </BaseSpan>
      <withStyles(TextLinePure)>
        text
      </withStyles(TextLinePure)>
    </BaseSpan>
    <withStyles(TextLinePure)>
       with tags
    </withStyles(TextLinePure)>
  </withStyles(Quote)>
  <withStyles(TextLinePure)>
     
  </withStyles(TextLinePure)>
  <withStyles(UrlPure)
    url="http://fastpic.ru/10/0.png"
  >
    <Image
      url="http://fastpic.ru/e.gif"
    />
    <withStyles(TextLinePure)>
       Link with 2 images as link 
    </withStyles(TextLinePure)>
    <Image
      url="http://fastpic.ru/big/7b40.gif"
    />
  </withStyles(UrlPure)>
</withStyles(Root)>
`;

exports[`BbCodePresenterPure component with incorrect message (one redundant [b] tag) should  match expected snapshot and does not include last root tag as text 1`] = `
<withStyles(Root)>
  wrong/url.png
  <withStyles(TextLinePure)>
     text 
  </withStyles(TextLinePure)>
  <withStyles(UrlPure)
    url="http://correct.url/content.png"
  >
    http://correct.url/content.png
  </withStyles(UrlPure)>
  <NewLine />
  <withStyles(UrlPure)
    url="https://correct.url/content.png"
  >
    https://correct.url/content.png
  </withStyles(UrlPure)>
  <NewLine />
  <withStyles(UrlPure)
    url="http://path.to/some/image.png"
  >
    <withStyles(TextLinePure)>
      Link
    </withStyles(TextLinePure)>
  </withStyles(UrlPure)>
  <withStyles(TextLinePure)>
     
  </withStyles(TextLinePure)>
  <withStyles(UrlPure)
    url="http://path.to/some/image.png"
  >
    <Image
      url="https://path.to/some/image.png"
    />
  </withStyles(UrlPure)>
  <withStyles(TextLinePure)>
     text 
  </withStyles(TextLinePure)>
  <BaseSpan
    className="default-BbCodePresenter-underline"
    style={Object {}}
  >
    <withStyles(TextLinePure)>
      text in u tag 
    </withStyles(TextLinePure)>
    <Color
      options="red"
    >
      <withStyles(TextLinePure)>
        red text
      </withStyles(TextLinePure)>
    </Color>
    <withStyles(TextLinePure)>
       
    </withStyles(TextLinePure)>
    <BaseSpan
      className="default-BbCodePresenter-bold"
      style={Object {}}
    >
      <withStyles(TextLinePure)>
        text in b tag 21
      </withStyles(TextLinePure)>
    </BaseSpan>
    <withStyles(TextLinePure)>
       
    </withStyles(TextLinePure)>
    <BaseSpan
      className="default-BbCodePresenter-underline"
      style={Object {}}
    >
      <withStyles(TextLinePure)>
        text in u tag
      </withStyles(TextLinePure)>
    </BaseSpan>
    <NewLine />
    <withStyles(TextLinePure)>
      text in u tag 
    </withStyles(TextLinePure)>
    <BaseSpan
      className="default-BbCodePresenter-bold"
      style={Object {}}
    >
      <withStyles(TextLinePure)>
        text in b tag
      </withStyles(TextLinePure)>
    </BaseSpan>
    <withStyles(TextLinePure)>
       
    </withStyles(TextLinePure)>
  </BaseSpan>
  <withStyles(TextLinePure)>
     this text contains 
  </withStyles(TextLinePure)>
  <BaseSpan
    className="default-BbCodePresenter-bold"
    style={Object {}}
  >
    <withStyles(TextLinePure)>
       that is a wrong tags 
    </withStyles(TextLinePure)>
    <withStyles(Code)
      id={49}
      options="kto"
    >
      <withStyles(TextLinePure)>
        some text[b]with other bbCodes[/b] in code tag
      </withStyles(TextLinePure)>
    </withStyles(Code)>
    <withStyles(TextLinePure)>
       text
    </withStyles(TextLinePure)>
    <NewLine />
    <withStyles(TextLinePure)>
       
    </withStyles(TextLinePure)>
    <Image
      url="http://fastpic.ru/big/e.gif"
    />
    <NewLine />
    <Image
      url="http://fastpic.ru/big/7.gif"
    />
    <NewLine />
    <Image
      url="http://fastpic.ru/big/c.gif"
    />
    <NewLine />
    <Image
      url="http://fastpic.ru/big/3.gif"
    />
    <withStyles(TextLinePure)>
       
    </withStyles(TextLinePure)>
    <withStyles(UrlPure)
      url="http://fastpic.ru/2015/0.png"
    >
      http://fastpic.ru/2015/0.png
    </withStyles(UrlPure)>
    <NewLine />
    <withStyles(UrlPure)
      url="http://fastpic.ru/2015/0.gif "
    >
      http://fastpic.ru/2015/0.gif 
    </withStyles(UrlPure)>
    <withStyles(Quote)>
      <withStyles(TextLinePure)>
         quote 
      </withStyles(TextLinePure)>
      <withStyles(Quote)
        options="kto"
      >
        <withStyles(TextLinePure)>
           and subQuote 
        </withStyles(TextLinePure)>
        <BaseSpan
          className="default-BbCodePresenter-italic"
          style={Object {}}
        >
          <withStyles(TextLinePure)>
            with 
          </withStyles(TextLinePure)>
          <BaseSpan
            className="default-BbCodePresenter-underline"
            style={Object {}}
          >
            <withStyles(TextLinePure)>
              some
            </withStyles(TextLinePure)>
          </BaseSpan>
          <withStyles(TextLinePure)>
            tags
          </withStyles(TextLinePure)>
        </BaseSpan>
        <withStyles(TextLinePure)>
           param
        </withStyles(TextLinePure)>
      </withStyles(Quote)>
      <withStyles(TextLinePure)>
         
      </withStyles(TextLinePure)>
      <BaseSpan
        className="default-BbCodePresenter-bold"
        style={Object {}}
      >
        <withStyles(TextLinePure)>
          some
        </withStyles(TextLinePure)>
        <BaseSpan
          className="default-BbCodePresenter-italic"
          style={Object {}}
        >
          <withStyles(TextLinePure)>
            other
          </withStyles(TextLinePure)>
        </BaseSpan>
        <withStyles(TextLinePure)>
          text
        </withStyles(TextLinePure)>
      </BaseSpan>
      <withStyles(TextLinePure)>
         with tags
      </withStyles(TextLinePure)>
    </withStyles(Quote)>
    <withStyles(TextLinePure)>
       
    </withStyles(TextLinePure)>
    <withStyles(UrlPure)
      url="http://fastpic.ru/10/0.png"
    >
      <Image
        url="http://fastpic.ru/e.gif"
      />
      <withStyles(TextLinePure)>
         Link with 2 images as link 
      </withStyles(TextLinePure)>
      <Image
        url="http://fastpic.ru/big/7b40.gif"
      />
    </withStyles(UrlPure)>
  </BaseSpan>
</withStyles(Root)>
`;

exports[`BbCodePresenterPure component with wrong message that contained wrong tags should  match expected snapshot 1`] = `
<withStyles(Root)>
  wrong/url.png
  <withStyles(TextLinePure)>
     text 
  </withStyles(TextLinePure)>
  <withStyles(UrlPure)
    url="http://correct.url/content.png"
  >
    http://correct.url/content.png
  </withStyles(UrlPure)>
  <NewLine />
  <withStyles(UrlPure)
    url="https://correct.url/content.png"
  >
    https://correct.url/content.png
  </withStyles(UrlPure)>
  <NewLine />
  <withStyles(UrlPure)
    url="http://path.to/some/image.png"
  >
    <withStyles(TextLinePure)>
      Link
    </withStyles(TextLinePure)>
  </withStyles(UrlPure)>
  <withStyles(TextLinePure)>
     
  </withStyles(TextLinePure)>
  <withStyles(UrlPure)
    url="http://path.to/some/image.png"
  >
    <Image
      url="https://path.to/some/image.png"
    />
  </withStyles(UrlPure)>
  <withStyles(TextLinePure)>
     text 
  </withStyles(TextLinePure)>
  <BaseSpan
    className="default-BbCodePresenter-underline"
    style={Object {}}
  >
    <withStyles(TextLinePure)>
      text in u tag 
    </withStyles(TextLinePure)>
    <Color
      options="red"
    >
      <withStyles(TextLinePure)>
        red text
      </withStyles(TextLinePure)>
    </Color>
    <withStyles(TextLinePure)>
       
    </withStyles(TextLinePure)>
    <BaseSpan
      className="default-BbCodePresenter-bold"
      style={Object {}}
    >
      <withStyles(TextLinePure)>
        text in b tag 21
      </withStyles(TextLinePure)>
    </BaseSpan>
    <withStyles(TextLinePure)>
       
    </withStyles(TextLinePure)>
    <BaseSpan
      className="default-BbCodePresenter-underline"
      style={Object {}}
    >
      <withStyles(TextLinePure)>
        text in u tag
      </withStyles(TextLinePure)>
    </BaseSpan>
    <NewLine />
    <withStyles(TextLinePure)>
      text in u tag 
    </withStyles(TextLinePure)>
    <BaseSpan
      className="default-BbCodePresenter-bold"
      style={Object {}}
    >
      <withStyles(TextLinePure)>
        text in b tag
      </withStyles(TextLinePure)>
    </BaseSpan>
    <withStyles(TextLinePure)>
       
    </withStyles(TextLinePure)>
  </BaseSpan>
  <withStyles(TextLinePure)>
     this here is wrong [tag] in code tag 
  </withStyles(TextLinePure)>
  <withStyles(Code)
    id={47}
    options="kto"
  >
    <withStyles(TextLinePure)>
      some text[b]with other bbCodes[/b] in code tag
    </withStyles(TextLinePure)>
  </withStyles(Code)>
  <withStyles(TextLinePure)>
     text
  </withStyles(TextLinePure)>
  <NewLine />
  <withStyles(TextLinePure)>
     
  </withStyles(TextLinePure)>
  <Image
    url="http://fastpic.ru/big/e.gif"
  />
  <NewLine />
  <Image
    url="http://fastpic.ru/big/7.gif"
  />
  <NewLine />
  <Image
    url="http://fastpic.ru/big/c.gif"
  />
  <NewLine />
  <Image
    url="http://fastpic.ru/big/3.gif"
  />
  <withStyles(TextLinePure)>
     
  </withStyles(TextLinePure)>
  <withStyles(UrlPure)
    url="http://fastpic.ru/2015/0.png"
  >
    http://fastpic.ru/2015/0.png
  </withStyles(UrlPure)>
  <NewLine />
  <withStyles(UrlPure)
    url="http://fastpic.ru/2015/0.gif "
  >
    http://fastpic.ru/2015/0.gif 
  </withStyles(UrlPure)>
  <withStyles(Quote)>
    <withStyles(TextLinePure)>
       quote 
    </withStyles(TextLinePure)>
    <withStyles(Quote)
      options="kto"
    >
      <withStyles(TextLinePure)>
         and subQuote 
      </withStyles(TextLinePure)>
      <BaseSpan
        className="default-BbCodePresenter-italic"
        style={Object {}}
      >
        <withStyles(TextLinePure)>
          with 
        </withStyles(TextLinePure)>
        <BaseSpan
          className="default-BbCodePresenter-underline"
          style={Object {}}
        >
          <withStyles(TextLinePure)>
            some
          </withStyles(TextLinePure)>
        </BaseSpan>
        <withStyles(TextLinePure)>
          tags
        </withStyles(TextLinePure)>
      </BaseSpan>
      <withStyles(TextLinePure)>
         param
      </withStyles(TextLinePure)>
    </withStyles(Quote)>
    <withStyles(TextLinePure)>
       
    </withStyles(TextLinePure)>
    <BaseSpan
      className="default-BbCodePresenter-bold"
      style={Object {}}
    >
      <withStyles(TextLinePure)>
        some
      </withStyles(TextLinePure)>
      <BaseSpan
        className="default-BbCodePresenter-italic"
        style={Object {}}
      >
        <withStyles(TextLinePure)>
          other
        </withStyles(TextLinePure)>
      </BaseSpan>
      <withStyles(TextLinePure)>
        text
      </withStyles(TextLinePure)>
    </BaseSpan>
    <withStyles(TextLinePure)>
       with tags
    </withStyles(TextLinePure)>
  </withStyles(Quote)>
  <withStyles(TextLinePure)>
     
  </withStyles(TextLinePure)>
  <withStyles(UrlPure)
    url="http://fastpic.ru/10/0.png"
  >
    <Image
      url="http://fastpic.ru/e.gif"
    />
    <withStyles(TextLinePure)>
       Link with 2 images as link 
    </withStyles(TextLinePure)>
    <Image
      url="http://fastpic.ru/big/7b40.gif"
    />
  </withStyles(UrlPure)>
</withStyles(Root)>
`;
